# nonsense-generator

./: Cargo.toml  LICENSE  README.md
src/: adjectives.rs  main.rs  nouns.rs  verbs.rs
